tests/unit/default/syntax-error/026-create-table-parens-name-colon-type-parens-num.x.t
---- IN ----
+%table(id:int(10|
---- OUT ----
---- ERR ----
syntax: expected `)` after `+%table(id:int(10` near `|` at position 17 - at line 1
---- EXIT ----
1
